fix centering and margin issues on small screen sizes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,10 +23,6 @@
   max-width: 100%;
 }
 
-.PollOptionButton {
-  margin: 0 100px;
-}
-
 .button {
   background-color: rgba(209, 128, 245, 0.3);
   border: 2px solid white;
@@ -137,6 +133,7 @@
   .result {
     padding: 12px;
     font-size: 14px;
+    margin: 10px 0;
   }
 }
 
@@ -158,6 +155,7 @@
   .result {
     padding: 10px;
     font-size: 12px;
+    margin: 10px 0;
   }
 }
 
